# finalytics

abc/: acbs_objectrelation.sql  batch_metadata.sql  batch_run_stats.sql  batchmetadata.sql  batchrunstats.sql  cdc_load_strategy_master.sql  cdcloadstrategymaster.sql  data_quality_results.sql  data_quality_std_object_schema_metadata.sql  dataqualityresults.sql  dataqualityrulemaster.sql  dataqualitystdobjectschemametadata.sql  dataqualitystdrulemapping.sql  duplicatemetadata.sql  duplicaterunstats.sql  errorlog.sql  job_metadata.sql  job_run_stats.sql  jobmetadata.sql  jobrunstats.sql  maintenancemetadata.sql  maintenancerunstats.sql  maskingrulemaster.sql  object_dependency.sql  object_job_mapping.sql  object_relation.sql  objectcdcrunstats.sql  objectdependency.sql  objectjobmapping.sql  objectmetadata.sql  objectmetadata_referencetable_bridge.sql  objectrelation.sql  objectrunstats.sql  process_run_stats.sql  processrunstats.sql  sourcemetadata.sql  standardization_rule_master.sql  standardizationrulemaster.sql  tempfilerunstats.sql  test.sql
fin/: account.sql  broker.sql  calendardate.sql  candle_pattern.sql  candle_type.sql  candlepattern.sql  candletype.sql  dbdeploymentversionhistorytest2.sql  dim_date.sql  dimdate.sql  etf_component_spy.sql  etf_eod_quote.sql  etfcomponent.sql  etfcomponentspy.sql  etfeodquote.sql  etfeomquote.sql  etfinstantquote.sql  (+54 more)
finalytics_poetry/: pyproject.toml
finalytics_poetry/src/finalytics_poetry/: __main__.py  finalytics_connection_params.py  finalytics_connector.py  finalytics_stage.py  ip.py  process.py  test.py  x.py
(+111 files in other folders)
