[tool.poetry]
name = "finalytics-poetry"
version = "0.1.0"
description = ""
authors = ["waynelxb <waynelxb@gmail.com>"]
readme = "README.md"
packages = [{include = "finalytics_poetry", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
yfinance = "^0.2.50"
psycopg = "^3.2.3"
psycopg2 = "^2.9.10"
joblib = "^1.4.2"
pgcopy = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
